<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgcolor"
    android:padding="15dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/btn_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/color_sum"
            android:fontFamily="serif"
            android:padding="25dp"
            android:text="@string/sum"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btn_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/color_sub"
            android:fontFamily="serif"
            android:padding="25dp"
            android:text="@string/sub"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btn_mul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/color_mul"
            android:fontFamily="serif"
            android:padding="25dp"
            android:text="@string/mul"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btn_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#f64f59"
            android:fontFamily="serif"
            android:padding="25dp"
            android:text="@string/div"
            android:textSize="30sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="serif-monospace"
        android:text="@string/Heading"
        android:textAlignment="center"
        android:textColor="#040303"
        android:textSize="35sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/creator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/creator"
        android:textAlignment="center"
        android:textColor="#33691E"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>